--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <canvas id="c"></canvas>
-  <audio id="music" src="music.mp3" loop></audio>
+  <audio id="music" src="music1.mp3" loop></audio>
   <div id="controls">
     <button id="btn">Play</button>
     <input type="range" id="vol" min="0" max="1" step="0.01" value="0.2">
@@ -17,3 +17,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
